syntax = "proto3";

package helloworld;

service Encrypt {
    rpc  ToEncrypt (EncryptRequest) returns (EncryptReply) {}
}

message EncryptRequest {
    repeated string customers = 1;
    string platform = 2;
    string tenantId = 3;
    string propertyId = 4;
    string value = 5;
}

message EncryptReply {
    repeated string customers = 1;
    string platform = 2;
    string tenantId = 3;
    string propertyId = 4;
    string value = 5;
}